# cookieaudit

./: .gitignore  README.de.md  README.fr.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cookieaudit/: __init__.py  cli.py  scanner.py
tests/: test_scanner.py
